@@ -1,0 +1,4 @@
+; $Id$
+; This is a good ini file
+
+FOO="Bar"
